--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -35,13 +35,28 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'store/css/main.css' %}">
+	{% comment %} <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> {% endcomment %}
 
+	{% comment %} bootstrap js cdn {% endcomment %}
+	
+	{% comment %} <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> {% endcomment %}
+
+
+	<!-- jQuery -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- Bootstrap JavaScript -->
+	{% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script> {% endcomment %}
+
+
+
+	 {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>   {% endcomment %}
 
 	<link rel="stylesheet" href="{% static 'store/magiczoom/magiczoom.css' %}">
 
 
 <!--===============================================================================================-->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	 {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  {% endcomment %}
 	
 	<script src="{% static 'store/magiczoom/magiczoom.js' %}"></script>
 </head>
@@ -149,7 +164,7 @@
 							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
 
-						<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+						<a href={% url 'guestwishlist' %} class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
 							<i class="zmdi zmdi-favorite-outline"></i>
 						</a>
 					</div>
@@ -527,7 +542,7 @@
 						</button>
 					</div> {% endcomment %}
 	
-					<div class="flex-w flex-c-m m-tb-10">
+					{% comment %} <div class="flex-w flex-c-m m-tb-10">
 						<div class="flex-c-m stext-106 cl6 size-104 bor4 pointer hov-btn3 trans-04 m-r-8 m-tb-4 js-show-filter">
 							<i class="icon-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-filter-list"></i>
 							<i class="icon-close-filter cl2 m-r-6 fs-15 trans-04 zmdi zmdi-close dis-none"></i>
@@ -550,10 +565,10 @@
 	
 							<input class="mtext-107 cl2 size-114 plh2 p-r-15" type="text" name="search-product" placeholder="Search">
 						</div>	
-					</div>
+					</div> {% endcomment %}
 	
 					<!-- Filter -->
-					<div class="dis-none panel-filter w-full p-t-10">
+					{% comment %} <div class="dis-none panel-filter w-full p-t-10">
 						<div class="wrap-filter flex-w bg6 w-full p-lr-40 p-t-27 p-lr-15-sm">
 							<div class="filter-col1 p-r-15 p-b-27">
 								<div class="mtext-102 cl2 p-b-15">
@@ -739,7 +754,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> {% endcomment %}
 				</div>
 					<br><br>
 				<div class="row isotope-grid">
@@ -756,8 +771,8 @@
 									  <img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
 								
 	
-								<a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-									Quick View
+								{% comment %} <a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+									Quick View {% endcomment %}
 	
 								
 							
@@ -772,12 +787,15 @@
 									<span class="stext-105 cl3">
 										Rs.{{item.price}}
 									</span>
-									<br>
+									
 									{% comment %} <a href={% url 'buynow' item.id %}>
 										Buy it
 									</a> {% endcomment %}
+									<div style="margin-left:200px;">
+										<a href={% url 'guestpreview' item.id %}> <button class="btn btn-info">Preview</button> </a>
+
+									</div>
 									
-									<a href={% url 'preview' item.id %}> <button class="btn btn-info">Preview</button> </a>
 									{% comment %} <a href={% url 'addtocart' item.id %}> Add to Cart</a> {% endcomment %}
 									{% comment %} <button type="button" class="addit" data-toggle="modal" data-target="#myModal" data-category-id="{{ item.id }}">Add to Cart</button> {% endcomment %}
 	
@@ -809,12 +827,34 @@
 									
 								</div>
 						
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
+								<br><br><br>
+							<div class="block2-txt-child2 flex-r p-t-3">
+								
+								<button class="wishlist btn btn-danger" data-product-id="{{item.id}}">
+									
+									<div class="row">
+										<div class="col-md-4">
+											<img class="icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt="">
+										</div>
+										{% comment %} <div class="col-md-8">
+											WishList
+										</div> {% endcomment %}
+									</div>
+								</button>
+
+
+
+
+
+
+								{% comment %} <a  href="" class="wishlist btn-addwish-b2 dis-block pos-relative "  data-product-id={{item.id}}>
+									<img class=" icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt=""  >
+									<img class=" icon-heart2 dis-block trans-04 ab-t-l" src="{% static 'store/images/icons/icon-heart-02.png' %}" alt=""  >
+								</a> {% endcomment %}
+							</div>
+							<div id="wishlistmsg{{item.id}}" class="row">
+
+							</div>
 							</div>
 						</div>
 					</div>
@@ -1260,6 +1300,70 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	</script>
 <!--===============================================================================================-->
 	<script src="{% static 'store/js/main.js' %}"></script>
+	<script>
+		$(document).ready(function() {
+			$(".wishlist").click(function() {
+				
+				var productid=$(this).data("product-id");
+				
+				// Get the selected offer value
+			  
+			   //$("#wishlistModal").modal("show");
+		
+			   //$("#confirm").click(function(){
+				 $.ajax({
+				   url: "/guestaddtowishlist/", // Replace with the URL of your Django view
+				   type: "GET",
+				   data: { productid: productid,
+						   
+						   
+					   },
+				   success: function(response) {
+					
+					if (response.alreadypresent){
+						$("#wishlistmsg"+productid).html(response.alreadypresent).addClass("text-danger");
+	
+					}
+					else if(response.added){
+						$("#wishlistmsg"+productid).html(response.added).addClass("text-success");
+	
+					}
+					
+					//$("#wishlistModal").modal("hide");
+					 //$("#offer" + orderid).remove();
+					 // Update the offer price on the page
+					 //var content = response.content;  // Assuming the response contains the updated offer price
+					 // Update the appropriate HTML element with the new offer price
+					 //$("#orderitem" + orderid).text("Cancelled").addClass("text-danger");;
+					 
+				   },
+				   error: function(xhr, errmsg, err) {
+					 // Handle any errors that occur during the AJAX request
+					 console.log(xhr.status + ": " + xhr.responseText);
+				   }
+				 });
+	
+	
+	
+	
+	
+	
+	
+	
+	
+			   //})
+			  // Send an AJAX request to update the offer price
+		  
+			});
+	
+			//$(".closeit").click(function(){
+			// $("#cancelModal").modal("hide");
+			//})
+	
+	
+	
+		  });
+	</script>
 
 </body>
 </html>
