--- a/store/templates/store/product.html
+++ b/store/templates/store/product.html
@@ -101,35 +101,93 @@
 						<div class="block2-pic hov-img0">
 							
 							
-								  <img src="{{ item.image1.url }}" alt="{{ item.name }} image">
+								  <img src="{{ item.image1.url }}" alt="{{ item.name }} image" class="image-zoom-container">
 							
-	
-							<a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
-								Quick View
+
+							{% comment %} <a href="#" id="{{item}}" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
+								Quick View {% endcomment %}
+
+							
 						
 						</div>
-	
+
 						<div class="block2-txt flex-w flex-t p-t-14">
 							<div class="block2-txt-child1 flex-col-l ">
 								<a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
 									{{item.name}}
 								</a>
-	
+
 								<span class="stext-105 cl3">
-									{{item.price}}
+									Rs.{{item.price}}
 								</span>
+								
 								{% comment %} <a href={% url 'buynow' item.id %}>
 									Buy it
 								</a> {% endcomment %}
-								<a href={% url 'guestpreview' item.id %}> <button class="btn btn-info">Preview</button> </a>
+								<div style="margin-left:200px;">
+									<a href={% url 'guestpreview' item.id %}> <button class="btn btn-info">Preview</button> </a>
+
+								</div>
+								
+								{% comment %} <a href={% url 'addtocart' item.id %}> Add to Cart</a> {% endcomment %}
+								{% comment %} <button type="button" class="addit" data-toggle="modal" data-target="#myModal" data-category-id="{{ item.id }}">Add to Cart</button> {% endcomment %}
+
+									<!-- Modal -->
+									{% comment %} <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+									<div class="modal-dialog" role="document">
+										<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="modalLabel">Confirm?</h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+											</button>
+										</div>
+										<div class="modal-body">
+											<a id="modalLink" href="#">Yes</a>
+										</div>
+										<div class="modal-footer">
+											<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+										</div>
+										</div>
+									</div>
+									</div> {% endcomment %}
+								  
+
+
+								
+								
+									
+								
 							</div>
 					
-							<div class="block2-txt-child2 flex-r p-t-3">
-								<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-									<img class="icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt="ICON">
-									<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-								</a>
-							</div>
+							<br><br><br>
+						<div class="block2-txt-child2 flex-r p-t-3">
+							
+							<button class="wishlist btn btn-danger" data-product-id="{{item.id}}">
+								
+								<div class="row">
+									<div class="col-md-4">
+										<img class="icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt="">
+									</div>
+									{% comment %} <div class="col-md-8">
+										WishList
+									</div> {% endcomment %}
+								</div>
+							</button>
+
+
+
+
+
+
+							{% comment %} <a  href="" class="wishlist btn-addwish-b2 dis-block pos-relative "  data-product-id={{item.id}}>
+								<img class=" icon-heart1 dis-block trans-04" src="{% static 'store/images/icons/icon-heart-01.png' %}" alt=""  >
+								<img class=" icon-heart2 dis-block trans-04 ab-t-l" src="{% static 'store/images/icons/icon-heart-02.png' %}" alt=""  >
+							</a> {% endcomment %}
+						</div>
+						<div id="wishlistmsg{{item.id}}" class="row">
+
+						</div>
 						</div>
 					</div>
 				</div>
@@ -299,15 +357,84 @@
 		</div>
 	</div>
 	
-	<div class="flex-c-m flex-w w-full p-t-45">
+	{% comment %} <div class="flex-c-m flex-w w-full p-t-45">
 		<a href="#" class="flex-c-m stext-101 cl5 size-103 bg2 bor1 hov-btn1 p-lr-15 trans-04">
 			Load More
 		</a>
-	</div>
+	</div> {% endcomment %}
 </div>
 
 
 
+
+
+
+
+
+<script>
+	$(document).ready(function() {
+		$(".wishlist").click(function() {
+			
+			var productid=$(this).data("product-id");
+			
+			// Get the selected offer value
+		  
+		   //$("#wishlistModal").modal("show");
+	
+		   //$("#confirm").click(function(){
+			 $.ajax({
+			   url: "/guestaddtowishlist/", // Replace with the URL of your Django view
+			   type: "GET",
+			   data: { productid: productid,
+					   
+					   
+				   },
+			   success: function(response) {
+				
+				if (response.alreadypresent){
+					$("#wishlistmsg"+productid).html(response.alreadypresent).addClass("text-danger");
+
+				}
+				else if(response.added){
+					$("#wishlistmsg"+productid).html(response.added).addClass("text-success");
+
+				}
+				
+				//$("#wishlistModal").modal("hide");
+				 //$("#offer" + orderid).remove();
+				 // Update the offer price on the page
+				 //var content = response.content;  // Assuming the response contains the updated offer price
+				 // Update the appropriate HTML element with the new offer price
+				 //$("#orderitem" + orderid).text("Cancelled").addClass("text-danger");;
+				 
+			   },
+			   error: function(xhr, errmsg, err) {
+				 // Handle any errors that occur during the AJAX request
+				 console.log(xhr.status + ": " + xhr.responseText);
+			   }
+			 });
+
+
+
+
+
+
+
+
+
+		   //})
+		  // Send an AJAX request to update the offer price
+	  
+		});
+
+		//$(".closeit").click(function(){
+		// $("#cancelModal").modal("hide");
+		//})
+
+
+
+	  });
+</script>
  
 
 {% endblock content %}
