--- a/storeadmin/templates/storeadmin/salesreport.html
+++ b/storeadmin/templates/storeadmin/salesreport.html
@@ -10,6 +10,42 @@
             Sales Report
         </h4>
     </div>
+    {% comment %} <div class="row  justify-content-center mt-5">
+      <h4>
+          Download Sales Report
+      </h4>
+  </div> {% endcomment %}
+
+  <div class="row justify-content-center border mt-2  ">
+      <form action="" method="POST">
+        {% csrf_token %}
+          <label class="mt-5" for="start_date">Start Date:</label>
+          <input class="form-control" type="date" id="start_date" name="start_date" required>
+          <br>
+          <label for="end_date">End Date:</label>
+          <input  class="form-control" type="date" id="end_date" name="end_date" required>
+          <br>
+         
+   
+  
+          <div class="row mb-5">
+            <button name="show" type="submit" class="btn add-product-btn btn-primary mt-2">Show Report</button>
+            <button name="download"  type="submit" class="btn add-product-btn btn-primary mt-2 ml-4 ">Download</button>
+              
+  
+          </div>
+          <div>
+            
+
+            
+
+          </div>
+    
+          
+      </form>
+
+  </div>
+  {% if orderobjs %}
     <div class="row">
         <table class="table table-striped">
             <thead>
@@ -42,35 +78,19 @@
           </table>
 
     </div>
-
-
-    <div class="row mt-5">
-        <h4>
-            Download Sales Report
-        </h4>
-    </div>
-
-    <div class="row mt-2">
-        <form action={% url 'downloadsales' %} method="GET">
-            <label for="start_date">Start Date:</label>
-            <input class="form-control" type="date" id="start_date" name="start_date" required>
-            <br>
-            <label for="end_date">End Date:</label>
-            <input  class="form-control" type="date" id="end_date" name="end_date" required>
-            <br>
-           
-     
     
-            <div class="row justify-content-end">
-                
-                <button  type="submit" class="btn add-product-btn btn-primary mt-2">Download</button>
-                
-              </div>
-      
-            
-        </form>
+    
+    {% endif %}
+    {% if message %}
+    <div class="text-center mt-4 text-danger">
+      {{message}}
+
 
     </div>
+    {% endif %}
+
+
+    
     <br><br><br><br>
 </div>
 
